Cloth doesn't collide with objects, and itself. #43406
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#43406
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system and graphics card
Windows 7 Ultimate, GTX 970.
Blender Version
Broken: All new from Buildbot including Gooseberry branch.
Worked: Official from Blender.org
Short description of error
Like in topic. Cloth object don't collide with collision object, and don't collide with itself.
Exact steps for others to reproduce the error
Add plane, subdivide, add to it cloth simulation. Add sphere, add collision and watch.
Changed status to: 'Open'
Added subscriber: @adrian2608
#43527 was marked as duplicate of this issue
#43717 was marked as duplicate of this issue
Added subscriber: @zeauro
I confirm the same problem under Ubuntu 14.04 64 bits.
no_cloth.blend
attached.blend works under official 2.73 but it does not for master 2.73.4 hash
3121941
.My bad, i disabled contact point generation for cloth during work on the hair solver.
Using the same collision algorithm for cloth (surface) and hair (strands) geometry may not be a good idea in the long run. For a simple penalty-force response it may still work ok-ish, but already the contact detection needs to work differently with simple BVH tree intersection tests.
Eventually i'd like to move to Bullet collision detection, using ghost objects so we can handle responses separately in our own solver. Cloth is a pretty straightforward mesh collision shape, but hair requires some more creative solution, e.g. using a compound implicit shape of cylinders and spheres (connected capsules).
The response part could then at least use a 3-stage Coulomb friction model (free - impacting - sliding), which works a lot better for stable resting on colliders. We could then also look into more advanced collision integration in the solver itself, using a solver method that supports unilateral constraints much better than penalty forces. For in-depth info, here is a selection of papers on the subject:
Large Steps in Cloth Simulation (Baraff, Witkin 1998)
A Hybrid Iterative Solver for Robustly Capturing Coulomb Friction in Hair Dynamics (Daviet, Descoubes 2011)
Implicit Contact Handling for Deformable Objects (MA Otaduy, R Tamstorf, D Steinemann 2009)
Added subscriber: @Sergey
Added subscriber: @ZauberParacelsus
Added subscriber: @tischbein3-2
Added subscriber: @Lapineige
Closed as duplicate of #43717
Changed status from 'Duplicate' to: 'Open'
Added subscriber: @kevindietrich
Sorry I screwed up merging duplicates...
Added subscribers: @sindra1961, @LukasTonne
Added subscriber: @rajaditya_m
Hi I am a newbie with who is willing to work on cloth simulation aspect of blender since it is a part of my Phd thesis. Is this bug already fixed ?
I suggest using the 2.73a release. The issue with cloth collisions only occurs in the upstream development versions of blender.
Yes, I tested it with the 2.72 release edition and it seems there the problem is not there. But it is occuring in the developer build that I got from the git repository. I will look into this. Since this is my first tryst with blender any suggestions will be welcome.
This issue was referenced by
dfefd36837
Changed status from 'Open' to: 'Resolved'
Closed by commit
dfefd36837
.I seem to recognize collision, but do not function for cloth sim.
I attach a file.
Cube should stand in the former version.
However, bending is ignored in the revised version.
clothtest.blend
[The edition that I confirmed]
blender-2.73-56935e2-win32.zip
version 2.73 (sub 9), branch b'master', commit date b'2015-03-02' b'00:05', hash b'56935e2', b'Release'
I think that friction does not function in the same way.
I think that some situation is different.
Results are different even if they make the same setting in 2.73a(release edition) and the revision.
The result is the same even if I carry out the result of made blend file in any version.
Made blend files are different.
I made this file in a revised version.
clothtest2.blend
I made this file in 2.73a(release edition).
clothtest2_release.blend
Both setting is the same.
Changed status from 'Resolved' to: 'Open'
Confirmed, i think i'm not applying positions in quite the same way or so. Will look into it ...
Closed as duplicate of #43911
Merged into #43911 because its description is more specific.